# C0NIC2L

./: CMakeLists.txt  Main.cpp  README.md  slicer.cpp  slicer.h
C0NIC2L V0.1/: VERSION.TXT
C0NIC2L-FILE/: TEXT
C0NIC2L-FILES/: Version
