cmake_minimum_required(VERSION 3.10)
project(C0NIC2L)

# Set C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Add executable
add_executable(C0NIC2L main.cpp)

# Add additional source files as needed
# target_sources(C0NIC2L PRIVATE <list_of_source_files>)
